# CRandom

./: CMakeLists.txt  README.md
src/: cvis.cpp  fragment.frag  main.cpp  pcg.c  prng.c  prng.glsl  shadervis.cpp  voronoi.glsl
